/**
 * 产品服务
 */
syntax = "proto3";

package product;

option go_package = "./proto;gateway";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "global/validate/validate.proto";

// 产品服务接口定义
service Product {
  /// 获取产品三级分类树
  rpc CategoryTree(google.protobuf.Empty) returns (CategoryReply){
    option (google.api.http) = {
      get: "/v1/product/cat"
    };
  };
  /// sku商品搜索
  rpc SkuSearch(SearchReq) returns (SearchReply){
    option (google.api.http) = {
      post: "/v1/product/search"
      body: "*"
    };
  };
  /// sku商品列表
  rpc SkuList(SkuListReq) returns (SkuListReply){
    option (google.api.http) = {
      get: "/v1/product/list"
      additional_bindings {
        get: "/v1/product/list/cat/{cat_id}/p/{page}"
      }
    };
  };
  /// sku商品详情
  rpc SkuDetail(SkuReq) returns (SkuReply){
    option (google.api.http) = {
      get: "/v1/product/detail/{sku_id}"
    };
  };
  /// sku销售属性
  rpc GetSkuSaleAttrs(SkuReq) returns (SkuSaleAttrReply){
    option (google.api.http) = {
      get: "/v1/product/attr/{sku_id}"
    };
  };
}

// ---- 请求结构 ----

// 商品详情请求结构
message SkuReq {
  int64 sku_id = 1 [(validate.rules).int64.gt = 0];
}

// 商品列表请求结构
message SkuListReq {
  int64 cat_id = 1; // 分类
  int32 page = 2;  // 分页
}

// 搜索请求结构
message SearchReq {
  string keyword = 1; /// 关键字
  int64 cat_id = 2; /// 分类id
  int32 field = 3; /// 排序字段
  int32 order = 4; /// 排序类型 0=asc 1=desc
  bool has_stock = 5; // 是否有库存
  int32 price_s = 6; /// 价格区间起始
  int32 price_e = 7; /// 价格区间止
  repeated int64 brand_id = 8; /// 品牌,多选
  repeated SearchAttrs attrs = 9; /// 规格属性
  int32 page = 10; /// 分页
}

// 搜索规格结构
message SearchAttrs {
  int64 id = 1; // 规格名id
  repeated string values = 2; // 规格值列表
}

// ---- 响应结构 ----

// 产品分类
message CategoryReply {
  int32 code = 1;     /// 状态码
  string message = 2; /// 消息
  repeated Category data = 3;
}

// 商品详情
message SkuReply {
  int32 code = 1;     /// 状态码
  string message = 2; /// 消息
  Sku data = 3;
}

// 产品列表响应结构
message SkuListReply {
  int32 code = 1;     /// 状态码
  string message = 2; /// 消息
  repeated SkuEs data = 3; // 产品列表
}

// 搜索结构
message SearchReply {
  int32 code = 1;     /// 状态码
  string message = 2; /// 消息
  repeated SkuEs data = 3;  /// 搜索商品
  repeated BrandEs brands = 4;  /// 当前查询到的结果锁涉及到的品牌
  repeated AttrEs attrs = 5; /// 当前查询到的结果锁涉及到的所有属性
  repeated CatEs cats = 6; /// 当前查询到的结果锁涉及到的所有分类
}

// sku销售属性
message SkuSaleAttrReply {
  int32 code = 1;     /// 状态码
  string message = 2; /// 消息
  SkuSaleAttr data = 3;
}

// ---- 基础数据结构定义 ----

// es中sku结构
message SkuEs {
  int64 id = 1;   /// sku_id
  string title = 2; /// 商品标题
  double price = 3;  /// 价格
  string cover = 4; /// 封面
  int32 sale_count = 5; /// 销量
  bool has_stock = 6; /// 是否有库存
}

// es中品牌结构
message BrandEs {
  int64 id = 1;   /// 品牌id
  string name = 2;  /// 品牌名
  string logo = 3; /// 品牌logo
}

// es中属性结构
message AttrEs {
  int64 id = 1;    /// 属性id
  string name = 2; /// 属性名
  repeated string values = 3;  /// 属性值
}

// es中分类结构
message CatEs {
  int64 id = 1; /// 分类id
  string name = 2;  /// 分类名
}

// 产品分类结构
message Category {
  int64 id = 1; /// 分类id
  int64 parent_id = 2;  /// 父id
  string name = 3;  /// 分类名
  int32 sort = 4; /// 排序值
  repeated Category child = 5; /// 下级分类列表
}

// 商品详情结构
message Sku {
  int64 id = 1; /// sku_id
  int64 spu_id = 2; /// spu_id
  int64 cat_id = 3; /// 分类id
  int64 brand_id = 4; /// 品牌id
  string title = 5; /// 商品标题
  string desc = 6;  /// 描述
  string cover = 7; /// 封面图
  string subtitle = 8;  /// 副标题
  double price = 9; /// 价格
  int64 sale_count = 10;  /// 销量
  int32 stock = 11; /// 库存
  bool is_many = 12; /// 是否多规格
  repeated Skus skus = 13;  /// spu下所有sku商品
  repeated Attrs attrs = 14;  /// 当前sku对应spu规格属性
  repeated SaleAttrs sale_attrs = 15;  ///当前sku下的销售属性
  repeated string banners = 16;  /// sku图集
  repeated string mains = 17;  /// spu介绍
}

// sku销售属性结构
message SkuSaleAttr {
  int64 id = 1; /// sku_id
  bool is_many = 2; /// 是否多规格
  repeated Skus skus = 11;  /// spu下所有sku商品
  repeated SaleAttrs sale_attrs = 13;  ///当前sku下的销售属性
}

// sku商品信息
message SkuInfo {
  int64 id = 1; /// sku_id
  int64 spu_id = 2; /// spu_id
  int64 cat_id = 3; /// 分类id
  int64 brand_id = 4; /// 品牌id
  string title = 5; /// 商品标题
  string desc = 6;  /// 描述
  string cover = 7; /// 封面图
  string subtitle = 8;  /// 副标题
  int64 price = 9; /// 价格
  int64 sale_count = 10;  /// 销量
  string attr_value = 11; /// 销售属性值
}

// 属性分组以及分组下规格属性结构
message Attrs {
  int64 group_id = 1; /// 规格属性分组id
  string group_name = 2;  /// 规格属性分组名
  repeated Attr items = 3;  /// 分组下所有规格属性
}

// 属性结构
message Attr {
  int64 id = 1; /// 属性id
  string name = 2;  /// 属性名
  string value = 3; /// 属性值
}

// spu下所有sku
message Skus {
  int64 sku_id = 1; /// sku_id
  double price = 2; /// 价格
  int32 stock = 3;  /// 库存
  repeated SkuAttr attrs = 4; /// 对应的销售属性
}

// 销售属性结构
message SkuAttr {
  int64 attr_id = 1;  /// 属性id
  int64 value_id = 2; /// 属性值id
  string attr_name = 3; /// 属性名
  string value_name = 4;  /// 属性值
}

// sku下所有销售属性结构
message SaleAttrs {
  int64 attr_id = 1;  /// 销售属性id
  string attr_name = 2; /// 销售属性名
  repeated SkuValue values = 3; /// 属性值列表
}

// 规格值结构
message SkuValue {
  int64 id = 1; /// 属性值id
  string name = 2;  /// 属性名
}
